--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,16 @@ html,
 body {
   overscroll-behavior-x: contain;
 }
+
+.fade-in {
+  animation: fade-in 0.5s;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 100;
+  }
+}
